// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkspaceActionsDropdown dropdown toggle snapshot 1`] = `
<button
  aria-expanded={false}
  aria-label="Actions"
  className="pf-v6-c-menu-toggle pf-m-primary"
  data-ouia-component-id="OUIA-Generated-MenuToggle-primary-1"
  data-ouia-component-type="PF6/MenuToggle"
  data-ouia-safe={true}
  data-testid="1234-action-dropdown"
  data-testtype="dropdown-toggle"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="pf-v6-c-menu-toggle__text"
  >
    Actions
  </span>
  <span
    className="pf-v6-c-menu-toggle__controls"
  >
    <span
      className="pf-v6-c-menu-toggle__toggle-icon"
    >
      <svg
        aria-hidden={true}
        aria-labelledby={null}
        className="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`WorkspaceActionsDropdown kebab toggle snapshot 1`] = `
<button
  aria-expanded={false}
  aria-label="Actions"
  className="pf-v6-c-menu-toggle pf-m-plain"
  data-ouia-component-id="OUIA-Generated-MenuToggle-plain-1"
  data-ouia-component-type="PF6/MenuToggle"
  data-ouia-safe={true}
  data-testid="1234-action-dropdown"
  data-testtype="kebab-toggle"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="pf-v6-c-menu-toggle__text"
  >
    <svg
      aria-hidden={true}
      aria-labelledby={null}
      className="pf-v6-svg"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 192 512"
      width="1em"
    >
      <path
        d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
      />
    </svg>
  </span>
</button>
`;
